Replace "Quarkus" translations to align words

--- a/l10n/po/ja_JP/_guides/all-builditems.adoc.po
+++ b/l10n/po/ja_JP/_guides/all-builditems.adoc.po
@@ -39,7 +39,7 @@ msgstr ""
 #: upstream/_guides/all-builditems.adoc:11
 #, fuzzy, no-wrap
 msgid "Quarkus - Build Items"
-msgstr "クォークス - ビルドアイテム"
+msgstr "Quarkus - ビルドアイテム"
 
 #. type: Plain text
 #: upstream/_guides/all-builditems.adoc:14
