--- a/l10n/po/ja_JP/_guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_guides/datasource.adoc.po
@@ -41,7 +41,7 @@ msgstr "データベースへの接続を取得する通常の方法は、デー
 #: upstream/_guides/datasource.adoc:16
 #, fuzzy
 msgid "Quarkus has you covered either way:"
-msgstr "どちらにしてもクォークスはあなたをカバーしています。"
+msgstr "どちらにしてもQuarkusはあなたをカバーしています。"
 
 #. type: Plain text
 #: upstream/_guides/datasource.adoc:18
