--- a/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-kubernetes.adoc.po
@@ -1306,7 +1306,7 @@ msgstr "String"
 #: upstream/_guides/deploying-to-kubernetes.adoc:970
 #, fuzzy, no-wrap
 msgid "${quarkus.container-image.name}"
-msgstr "クォークス.コンテナ-イメージ.名}."
+msgstr "Quarkus.コンテナ-イメージ.名}."
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:631
@@ -2629,7 +2629,7 @@ msgstr "生成されたサービスは、以下のプロパティーを使用し
 #: upstream/_guides/deploying-to-kubernetes.adoc:969
 #, fuzzy, no-wrap
 msgid "quarkus.knative.name"
-msgstr "クォークスクスノヴァティブ名"
+msgstr "Quarkusクスノヴァティブ名"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:970
@@ -2641,7 +2641,7 @@ msgstr "quarkus.knative.version"
 #: upstream/_guides/deploying-to-kubernetes.adoc:971
 #, fuzzy, no-wrap
 msgid "quarkus.knative.part-of"
-msgstr "クォークスニティブ部"
+msgstr "Quarkusニティブ部"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:972
@@ -2695,7 +2695,7 @@ msgstr "quarkus.knative.command"
 #: upstream/_guides/deploying-to-kubernetes.adoc:980
 #, fuzzy, no-wrap
 msgid "quarkus.knative.arguments"
-msgstr "クォークスニティブ引数"
+msgstr "Quarkusニティブ引数"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:981
@@ -2815,7 +2815,7 @@ msgstr "quarkus.knative.revision-name"
 #: upstream/_guides/deploying-to-kubernetes.adoc:1000
 #, fuzzy, no-wrap
 msgid "quarkus.knative.traffic"
-msgstr "クォークスニティブトラヒック"
+msgstr "Quarkusニティブトラヒック"
 
 #. type: Table
 #: upstream/_guides/deploying-to-kubernetes.adoc:1000
