--- a/l10n/po/ja_JP/_guides/quarkus-intro.adoc.po
+++ b/l10n/po/ja_JP/_guides/quarkus-intro.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_guides/quarkus-intro.adoc:1
 #, fuzzy, no-wrap
 msgid "What is Quarkus"
-msgstr "クォークスとは"
+msgstr "Quarkusとは"
 
 #.  tag::intro[]
 #. type: Plain text
@@ -131,7 +131,7 @@ msgstr "スクラッチパッド"
 #: upstream/_guides/quarkus-intro.adoc:44
 #, fuzzy
 msgid "Quarkus believes in developer Joy."
-msgstr "クォークスは開発者のジョイを信じています。"
+msgstr "Quarkusは開発者のジョイを信じています。"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:48
