--- a/l10n/po/ja_JP/_guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute-reference.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_guides/qute-reference.adoc:6
 #, fuzzy, no-wrap
 msgid "Quarkus - Qute Reference Guide"
-msgstr "クォークス - キューテのリファレンスガイド"
+msgstr "Quarkus - キューテのリファレンスガイド"
 
 #. type: Plain text
 #: upstream/_guides/qute-reference.adoc:24
