--- a/l10n/po/ja_JP/_posts/2020-01-14-quarkus-newsletter-4.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-01-14-quarkus-newsletter-4.adoc.po
@@ -36,7 +36,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: クォークス・ニュースレター第4号\n"
+"title: Quarkus・ニュースレター第4号\n"
 "date: 2020-01-14\n"
 "tags: newsletter\n"
 "synopsis: Quarkus周辺の最新オンラインコンテンツ\n"
