--- a/l10n/po/ja_JP/_posts/2020-01-20-sentry-the-guardian-of-your-quarkus-app.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-01-20-sentry-the-guardian-of-your-quarkus-app.adoc.po
@@ -86,7 +86,7 @@ msgstr "今、からかわれていますね。飛び込んでみましょう。
 #: upstream/_posts/2020-01-20-sentry-the-guardian-of-your-quarkus-app.adoc:24
 #, fuzzy, no-wrap
 msgid "Sentry, the guardian has arrived on Quarkus"
-msgstr "セントリー、守護者はクォークスに到着しました"
+msgstr "セントリー、守護者はQuarkusに到着しました"
 
 #. type: Plain text
 #: upstream/_posts/2020-01-20-sentry-the-guardian-of-your-quarkus-app.adoc:27
