--- a/l10n/po/ja_JP/_posts/2020-06-23-supersonic-subatomic-graphql.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-06-23-supersonic-subatomic-graphql.adoc.po
@@ -371,7 +371,7 @@ msgstr ""
 #: upstream/_posts/2020-06-23-supersonic-subatomic-graphql.adoc:144
 #, fuzzy
 msgid "Now browse to the quarkus example:"
-msgstr "今すぐクォークスの例を参照してください。"
+msgstr "今すぐQuarkusの例を参照してください。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-06-23-supersonic-subatomic-graphql.adoc:148
