--- a/l10n/po/ja_JP/_posts/2020-06-25-quarkus-newsletter-7.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-06-25-quarkus-newsletter-7.adoc.po
@@ -36,7 +36,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: クォークス・ニュースレター第7号\n"
+"title: Quarkus・ニュースレター第7号\n"
 "date: 2020-06-25\n"
 "tags: newsletter\n"
 "synopsis: Quarkus周辺の最新オンラインコンテンツ\n"
