--- a/l10n/po/ja_JP/_posts/2020-09-23-cytech-customer-story.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-09-23-cytech-customer-story.adoc.po
@@ -118,7 +118,7 @@ msgstr "ライブリロード、非常に高速なスタートアップは、Jav
 #: upstream/_posts/2020-09-23-cytech-customer-story.adoc:34
 #, fuzzy, no-wrap
 msgid "Quarkus: a game changer"
-msgstr "クォークス:ゲームチェンジャー"
+msgstr "Quarkus:ゲームチェンジャー"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-23-cytech-customer-story.adoc:37
