--- a/l10n/po/ja_JP/_posts/2020-10-05-contributing-for-the-first-time.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-05-contributing-for-the-first-time.adoc.po
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 初めてのクォークスへの投稿\n"
+"title: 初めてのQuarkusへの投稿\n"
 "date: 2020-10-05\n"
 "tags: contribution hacktoberfest\n"
 "synopsis: Hacktoberfestが始まりましたが、お気に入りのフレームワークにどうやって貢献しようか悩んでいませんか?この記事では、いくつかの答えを与えようとしています。\n"
@@ -106,7 +106,7 @@ msgstr "これは、挑戦的で、刺激的で、豊かなものでした...し
 #: upstream/_posts/2020-10-05-contributing-for-the-first-time.adoc:35
 #, fuzzy
 msgid "OK, now let's see how to make your first contribution to Quarkus."
-msgstr "さてさて、ここからはクォークスへの初投稿の仕方を見ていきましょう。"
+msgstr "さてさて、ここからはQuarkusへの初投稿の仕方を見ていきましょう。"
 
 #. type: Title ==
 #: upstream/_posts/2020-10-05-contributing-for-the-first-time.adoc:36
