--- a/l10n/po/ja_JP/_posts/2020-11-25-stylish-api.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-11-25-stylish-api.adoc.po
@@ -79,7 +79,7 @@ msgstr "Swagger UIのデフォルトスタイルがバニラのSwagger UIからQ
 #: upstream/_posts/2020-11-25-stylish-api.adoc:23
 #, fuzzy, no-wrap
 msgid "quarkus_brand"
-msgstr "クォークスブランド"
+msgstr "Quarkusブランド"
 
 #. type: Target for macro image
 #: upstream/_posts/2020-11-25-stylish-api.adoc:23
