--- a/l10n/po/ja_JP/_posts/2019-05-05-quarkus-has-a-new-logo.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-05-05-quarkus-has-a-new-logo.adoc.po
@@ -62,7 +62,7 @@ msgstr "Quarkusのロゴ"
 #: upstream/_posts/2019-05-05-quarkus-has-a-new-logo.adoc:15
 #, fuzzy, no-wrap
 msgid "The Full Quarkus Logo"
-msgstr "フルクォークスのロゴ"
+msgstr "完全なQuarkusのロゴ"
 
 #. type: Target for macro image
 #: upstream/_posts/2019-05-05-quarkus-has-a-new-logo.adoc:15
