--- a/l10n/po/ja_JP/_posts/2020-02-26-quarkus-newsletter-5.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-02-26-quarkus-newsletter-5.adoc.po
@@ -36,7 +36,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: クォークス・ニュースレター第5号\n"
+"title: Quarkus・ニュースレター第5号\n"
 "date: 2020-02-26\n"
 "tags: newsletter\n"
 "synopsis: Quarkus周辺の最新オンラインコンテンツ\n"
