--- a/l10n/po/ja_JP/_posts/2020-05-07-quarkus-newsletter-6.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-05-07-quarkus-newsletter-6.adoc.po
@@ -36,7 +36,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: クォークス・ニュースレター第6号\n"
+"title: Quarkus・ニュースレター第6号\n"
 "date: 2020-05-07\n"
 "tags: newsletter\n"
 "synopsis: Quarkus周辺の最新オンラインコンテンツ\n"
