--- a/l10n/po/ja_JP/_posts/2020-05-06-sedona-rewrites-insurance-premium.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-05-06-sedona-rewrites-insurance-premium.adoc.po
@@ -300,7 +300,7 @@ msgstr "一般的に、SedonaのQuarkusに対する意見は _「明らかに肯
 #: upstream/_posts/2020-05-06-sedona-rewrites-insurance-premium.adoc:88
 #, fuzzy
 msgid "They also develop in Kotlin, which is also supported by Quarkus."
-msgstr "コトリンでも展開していますが、これもQuarkusの支援を受けています。"
+msgstr "Kotlinでも展開していますが、これもQuarkusの支援を受けています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-05-06-sedona-rewrites-insurance-premium.adoc:90
