Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/spring-cache.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/spring-cache.adoc.po
@@ -457,17 +457,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-cache.adoc:264
 msgid "`@Cacheable`"
-msgstr ""
+msgstr "`@Cacheable`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-cache.adoc:265
 msgid "`@CachePut`"
-msgstr ""
+msgstr "`@CachePut`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-cache.adoc:266
 msgid "`@CacheEvict`"
-msgstr ""
+msgstr "`@CacheEvict`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-cache.adoc:270
