--- a/l10n/po/ja_JP/_versions/1.11/guides/status-include.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/status-include.adoc.po
@@ -19,24 +19,24 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/status-include.adoc:4
 msgid "This technology is considered {extension-status}."
-msgstr ""
+msgstr "この技術は、{extension-status}と考えられています。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/status-include.adoc:9
 msgid "In _experimental_ mode, early feedback is requested to mature the idea.  There is no guarantee of stability nor long term presence in the platform until the solution matures.  Feedback is welcome on our https://groups.google.com/d/forum/quarkus-dev[mailing list] or as issues in our https://github.com/quarkusio/quarkus/issues[GitHub issue tracker]."
-msgstr ""
+msgstr "_experimental_ モードでは、アイデアを成熟させるために早期のフィードバックが求められます。ソリューションが成熟するまでの間、プラットフォームの安定性や長期的な存在を保証するものではありません。フィードバックは link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] や link:https://github.com/quarkusio/quarkus/issues[GitHubの課題管理] で受け付けています。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/status-include.adoc:14
 msgid "In _preview_, backward compatibility and presence in the ecosystem is not guaranteed.  Specific improvements might require to change configuration or APIs and plans to become _stable_ are under way.  Feedback is welcome on our https://groups.google.com/d/forum/quarkus-dev[mailing list] or as issues in our https://github.com/quarkusio/quarkus/issues[GitHub issue tracker]."
-msgstr ""
+msgstr "_preview_ では、下位互換性やエコシステムでの存在は保証されていません。具体的な改善には設定や API の変更が必要になるかもしれませんが、 _stable_ 版になるための計画は現在進行中です。フィードバックは link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] や link:https://github.com/quarkusio/quarkus/issues[GitHub の課題管理] で受け付けています。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/status-include.adoc:17
 msgid "Being _stable_, backward compatibility and presence in the ecosystem are taken very seriously."
-msgstr ""
+msgstr "_stable_ では、下位互換性があること、エコシステムの中に存在していることが、非常に重要だと考えられています。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/status-include.adoc:20
 msgid "For a full list of possible extension statuses, check our https://quarkus.io/faq/#extension-status[FAQ entry]."
-msgstr ""
+msgstr "とりうるエクステンションステータスの完全なリストについては、 link:https://quarkus.io/faq/#extension-status[FAQの項目を] 参照してください。"
