--- a/l10n/po/ja_JP/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-03 19:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-05 17:07+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.12.1.Final released - Bugfixes'\n"
@@ -44,21 +44,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:11
-#, fuzzy
 msgid "1.12.1.Final is a maintenance release fixing bugs and improving the documentation."
 msgstr "1.12.1.Finalは、バグの修正とドキュメントの改善を行うメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:13
-#, fuzzy
 msgid "1.12.1.Final is a safe upgrade for everyone using Quarkus 1.11."
 msgstr "1.12.1.Finalは、Quarkus 1.11を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:15
-#, fuzzy
 msgid "If you are not using 1.12 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.12[1.12 migration guide]."
-msgstr "すでに1.12を使用していない場合は、1. link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.12[12移行ガイド]を参照してください。"
+msgstr "まだ1.12を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.12[1.12移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:16
@@ -74,9 +71,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:21
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.12.1.Final[the full changelog of 1.12.1.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.12.1.Final[1.12.1.1.Finalの完全な変更履歴はGitHubで]入手できます。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.12.1.Final[GitHubで1.12.1.1.Finalの完全な変更履歴]を入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:22
