--- a/l10n/po/ja_JP/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-03 19:11+0000\n"
+"POT-Creation-Date: 2021-03-05 09:10+0000\n"
 "PO-Revision-Date: 2021-03-05 17:07+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
@@ -49,7 +49,9 @@ msgstr "1.12.1.Finalは、バグの修正とドキュメントの改善を行う
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:13
-msgid "1.12.1.Final is a safe upgrade for everyone using Quarkus 1.11."
+#, fuzzy
+#| msgid "1.12.1.Final is a safe upgrade for everyone using Quarkus 1.11."
+msgid "1.12.1.Final is a safe upgrade for everyone using Quarkus 1.12."
 msgstr "1.12.1.Finalは、Quarkus 1.11を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
