Replace "conclusion" to align words

--- a/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
@@ -1552,7 +1552,7 @@ msgstr "詳しくは、 link:https://github.com/quarkiverse/quarkiverse/wiki[Qua
 #: upstream/_guides/building-my-first-extension.adoc:801
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:804
