--- a/l10n/po/ja_JP/_guides/microprofile-graphql.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-graphql.adoc.po
@@ -1627,7 +1627,7 @@ msgstr "エラーコード"
 #: upstream/_guides/microprofile-graphql.adoc:851
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:855
