--- a/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
@@ -679,7 +679,7 @@ msgstr "image:health-ui-screenshot01.png[alt=\"Health UI\"]"
 #: upstream/_guides/microprofile-health.adoc:345
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:351
