--- a/l10n/po/ja_JP/_guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb.adoc.po
@@ -1277,7 +1277,7 @@ msgstr "アプリケーションをネイティブモードで実行している
 #: upstream/_guides/mongodb.adoc:647
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:650
