--- a/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
@@ -1489,7 +1489,7 @@ msgstr "image:reactive-routes-guide-screenshot01.png[alt=\"Swagger UI\"]"
 #: upstream/_guides/reactive-routes.adoc:753
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/reactive-routes.adoc:756
