--- a/l10n/po/ja_JP/_guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-json.adoc.po
@@ -1148,7 +1148,7 @@ msgstr "リソースクラスでスコープ注釈が宣言されていない場
 #: upstream/_guides/rest-json.adoc:602
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:605
