--- a/l10n/po/ja_JP/_guides/vault-transit.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault-transit.adoc.po
@@ -499,7 +499,7 @@ msgstr ""
 #: upstream/_guides/vault-transit.adoc:254
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:259
