--- a/l10n/po/ja_JP/_guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault.adoc.po
@@ -1028,7 +1028,7 @@ msgstr "特定のユースケースに応じて、アクセス権の最小セッ
 #: upstream/_guides/vault.adoc:511
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:515
