--- a/l10n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
@@ -887,7 +887,7 @@ msgstr "詳細については、この説明書 https://github.com/openlab-red/q
 #: upstream/_posts/2020-04-28-quarkus-mutual-tls.adoc:437
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_posts/2020-04-28-quarkus-mutual-tls.adoc:441
