--- a/l10n/po/ja_JP/_posts/2020-10-06-reactive-messaging-emitter.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-06-reactive-messaging-emitter.adoc.po
@@ -242,7 +242,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2020-10-06-reactive-messaging-emitter.adoc:131
 msgid "## Conclusion"
-msgstr "## 結論"
+msgstr "## まとめ"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-06-reactive-messaging-emitter.adoc:134
