--- a/l10n/po/ja_JP/_posts/2020-11-02-quarkus-native-on-a-raspberry-pi.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-11-02-quarkus-native-on-a-raspberry-pi.adoc.po
@@ -1136,7 +1136,7 @@ msgstr ""
 #: upstream/_posts/2020-11-02-quarkus-native-on-a-raspberry-pi.adoc:523
 #, fuzzy
 msgid "## Conclusions"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-02-quarkus-native-on-a-raspberry-pi.adoc:526
