--- a/l10n/po/ja_JP/_posts/2020-11-03-kafka-commit-strategies.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-11-03-kafka-commit-strategies.adoc.po
@@ -295,7 +295,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2020-11-03-kafka-commit-strategies.adoc:193
 msgid "## Conclusion"
-msgstr "## 結論"
+msgstr "## まとめ"
 
 #. type: Plain text
 #: upstream/_posts/2020-11-03-kafka-commit-strategies.adoc:198
