--- a/l10n/po/ja_JP/_versions/1.11/guides/microprofile-graphql.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/microprofile-graphql.adoc.po
@@ -1536,7 +1536,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/microprofile-graphql.adoc:851
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-graphql.adoc:855
