--- a/l10n/po/ja_JP/_versions/1.11/guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/native-and-ssl.adoc.po
@@ -459,7 +459,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/native-and-ssl.adoc:233
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/native-and-ssl.adoc:237
