--- a/l10n/po/ja_JP/_versions/1.11/guides/vault-transit.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/vault-transit.adoc.po
@@ -469,7 +469,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/vault-transit.adoc:254
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/vault-transit.adoc:259
