--- a/l10n/po/ja_JP/_versions/1.7/guides/cdi.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/cdi.adoc.po
@@ -915,7 +915,7 @@ msgstr "イベント/オブザーバーの詳細については、 link:https://
 #: upstream/_versions/1.7/guides/cdi.adoc:402
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi.adoc:409
