--- a/l10n/po/ja_JP/_versions/1.7/guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/mailer.adoc.po
@@ -704,7 +704,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/mailer.adoc:400
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/mailer.adoc:404
