--- a/l10n/po/ja_JP/_versions/1.7/guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/reactive-routes.adoc.po
@@ -1296,7 +1296,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/reactive-routes.adoc:690
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/reactive-routes.adoc:693
