--- a/l10n/po/ja_JP/_versions/1.7/guides/sending-emails.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/sending-emails.adoc.po
@@ -529,7 +529,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/sending-emails.adoc:282
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/sending-emails.adoc:286
