--- a/l10n/po/ja_JP/_versions/1.7/guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/tests-with-coverage.adoc.po
@@ -997,7 +997,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:705
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/tests-with-coverage.adoc:708
