--- a/l10n/po/ja_JP/_guides/cdi.adoc.po
+++ b/l10n/po/ja_JP/_guides/cdi.adoc.po
@@ -977,7 +977,7 @@ msgstr "イベント/オブザーバーの詳細については、 link:https://
 #: upstream/_guides/cdi.adoc:424
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/cdi.adoc:431
