--- a/l10n/po/ja_JP/_guides/scripting.adoc.po
+++ b/l10n/po/ja_JP/_guides/scripting.adoc.po
@@ -801,7 +801,7 @@ msgstr ""
 #: upstream/_guides/scripting.adoc:439
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/scripting.adoc:441
