--- a/l10n/po/ja_JP/_posts/2020-10-20-kafka-failure-strategy.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-20-kafka-failure-strategy.adoc.po
@@ -437,7 +437,7 @@ msgstr "デッドレタートピックのメッセージを読むときは、 `d
 #: upstream/_posts/2020-10-20-kafka-failure-strategy.adoc:233
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-20-kafka-failure-strategy.adoc:236
