--- a/l10n/po/ja_JP/_versions/1.11/guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/building-my-first-extension.adoc.po
@@ -1417,7 +1417,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/building-my-first-extension.adoc:825
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/building-my-first-extension.adoc:828
