--- a/l10n/po/ja_JP/_versions/1.11/guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/mailer.adoc.po
@@ -723,7 +723,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/mailer.adoc:404
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/mailer.adoc:408
