--- a/l10n/po/ja_JP/_versions/1.11/guides/microprofile-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/microprofile-fault-tolerance.adoc.po
@@ -821,7 +821,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/microprofile-fault-tolerance.adoc:480
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-fault-tolerance.adoc:484
