--- a/l10n/po/ja_JP/_versions/1.11/guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/microprofile-health.adoc.po
@@ -619,7 +619,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:345
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:351
