--- a/l10n/po/ja_JP/_versions/1.11/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/mongodb.adoc.po
@@ -1221,7 +1221,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/mongodb.adoc:647
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:650
