--- a/l10n/po/ja_JP/_versions/1.11/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/rest-json.adoc.po
@@ -1153,7 +1153,7 @@ msgstr "リソースクラスでスコープ注釈が宣言されていない場
 #: upstream/_versions/1.11/guides/rest-json.adoc:602
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/rest-json.adoc:605
