--- a/l10n/po/ja_JP/_versions/1.11/guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/vault.adoc.po
@@ -951,7 +951,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/vault.adoc:504
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/vault.adoc:508
