--- a/l10n/po/ja_JP/_versions/1.7/guides/microprofile-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/microprofile-fault-tolerance.adoc.po
@@ -784,7 +784,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/microprofile-fault-tolerance.adoc:450
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-fault-tolerance.adoc:454
