--- a/l10n/po/ja_JP/_versions/1.7/guides/microprofile-graphql.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/microprofile-graphql.adoc.po
@@ -1452,7 +1452,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:787
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:791
