--- a/l10n/po/ja_JP/_versions/1.7/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/mongodb.adoc.po
@@ -1200,7 +1200,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/mongodb.adoc:639
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb.adoc:642
