--- a/l10n/po/ja_JP/_versions/1.7/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/rest-json.adoc.po
@@ -1051,7 +1051,7 @@ msgstr "リソースクラスでスコープ注釈が宣言されていない場
 #: upstream/_versions/1.7/guides/rest-json.adoc:554
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/rest-json.adoc:557
