--- a/l10n/po/ja_JP/_versions/1.7/guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/vault.adoc.po
@@ -946,7 +946,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/vault.adoc:503
 #, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:507
