--- a/l10n/po/ja_JP/_guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_guides/quartz.adoc.po
@@ -3,37 +3,35 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-23 11:07+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-06 12:38+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/quartz.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Scheduling Periodic Tasks with Quartz"
 msgstr "Quarkus - Quartzによる定期的なタスクのスケジューリング"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:13
-#, fuzzy
 msgid "Modern applications often need to run specific tasks periodically.  In this guide, you learn how to schedule periodic clustered tasks using the http://www.quartz-scheduler.org/[Quartz] extension."
 msgstr "最近のアプリケーションでは、定期的に特定のタスクを実行する必要があることがよくあります。このガイドでは、 link:http://www.quartz-scheduler.org/[Quartz] エクステンションを使用して定期的にクラスター化されたタスクをスケジュールする方法を学びます。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:17
-#, fuzzy
 msgid "If you only need to run in-memory scheduler use the link:scheduler[Scheduler] extension."
 msgstr "インメモリースケジューラーを実行する必要がある場合は、 link:scheduler[Scheduler] エクステンションを使用してください。"
 
@@ -50,9 +48,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:23
-#, fuzzy
 msgid "less than 10 minutes"
-msgstr "10分足らず"
+msgstr "10分未満"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:24
@@ -71,25 +68,23 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:27
-#, fuzzy
 msgid "Docker and Docker Compose installed on your machine"
-msgstr "マシンにインストールされているDockerとDocker Compose"
+msgstr "DockerとDocker Composeのインストール"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:28
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Architecture"
 msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:31
-#, fuzzy
 msgid "In this guide, we are going to expose one Rest API `tasks` to visualise the list of tasks created by a Quartz job running every 10 seconds."
 msgstr "このガイドでは、10秒ごとに実行されるQuartzジョブによって作成されたタスクのリストを可視化するために、1つのRest API `tasks` を公開します。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
@@ -105,13 +100,12 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:40
-#, fuzzy
 msgid "The solution is located in the `quartz-quickstart` {quickstarts-tree-url}/quartz-quickstart[directory]."
 msgstr "ソリューションは `quartz-quickstart` {quickstarts-tree-url}/quartz-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:41
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -155,33 +149,28 @@ msgstr "`native`  と `jvm`  の両方のモードに対応した `Dockerfile`  
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:62
-#, fuzzy
 msgid "the application configuration file"
 msgstr "アプリケーション設定ファイル"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:63
-#, fuzzy
 msgid "an `org.acme.quartz.TaskResource` resource"
 msgstr "`org.acme.quartz.TaskResource` リソース"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:64
-#, fuzzy
 msgid "an associated test"
-msgstr "関連試験"
+msgstr "関連するテスト"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:66
-#, fuzzy
 msgid "The Maven project also imports the Quarkus Quartz extension."
 msgstr "MavenプロジェクトはQuarkus Quartzエクステンションもインポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:69
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `quartz` extension to your project by running the following command in your project base directory:"
-msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `quartz` エクステンションを追加することができます。"
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `quartz` エクステンションを追加することができます:"
 
 #. type: delimited block -
 #: upstream/_guides/quartz.adoc:73
@@ -206,21 +195,19 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/quartz.adoc:88
-#, fuzzy
 msgid "To use a JDBC store, the `quarkus-agroal` extension, which provides the datasource support, is also required."
 msgstr "JDBCストアを使用するには、データソースのサポートを提供する `quarkus-agroal` エクステンションも必要です。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:90
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Task Entity"
 msgstr "タスクエンティティーの作成"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:93
-#, fuzzy
 msgid "In the `org.acme.quartz` package, create the `Task` class, with the following content:"
-msgstr "`org.acme.quartz` パッケージで、以下の内容の `Task` クラスを作成します。"
+msgstr "`org.acme.quartz` パッケージで、以下の内容の `Task` クラスを作成します:"
 
 #. type: delimited block -
 #: upstream/_guides/quartz.adoc:97 upstream/_guides/quartz.adoc:127
@@ -276,19 +263,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:119
-#, fuzzy
 msgid "Declare the entity using link:hibernate-orm-panache[Panache]"
 msgstr "link:hibernate-orm-panache[Panache] を使用してエンティティーを宣言する"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:120
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating a scheduled job"
 msgstr "スケジュールされたジョブの作成"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:123
-#, fuzzy
 msgid "In the `org.acme.quartz` package, create the `TaskBean` class, with the following content:"
 msgstr "`org.acme.quartz` パッケージで、以下の内容の `TaskBean` クラスを作成します。"
 
@@ -333,39 +318,34 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:146
-#, fuzzy
 msgid "Declare the bean in the _application_ scope"
 msgstr "_アプリケーション_ スコープでBeanを宣言する"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:147
-#, fuzzy
 msgid "Use the `@Scheduled` annotation to instruct Quarkus to run this method every 10 seconds and set the unique identifier for this job."
-msgstr "このメソッドを10秒ごとに実行するようにQuarkusに指示するには、 `@Scheduled` アノテーションを使用します。"
+msgstr "`@Scheduled` アノテーションを使用し、このメソッドを10秒ごとに実行し、識別子を付与するようにQuarkusに指示します。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:148
-#, fuzzy
 msgid "Create a new `Task` with the current start time."
 msgstr "現在の開始時刻で新しい `Task` を作成します。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:149
-#, fuzzy
 msgid "Persist the task in database using https://quarkus.io/guides/hibernate-orm-panache[Panache]."
-msgstr "link:https://quarkus.io/guides/hibernate-orm-panache[Panache] を使用してデータベースにタスクを持続させます。"
+msgstr "link:https://quarkus.io/guides/hibernate-orm-panache[Panache] を使用してデータベースにタスクを永続化します。"
 
 #. type: Title ===
 #: upstream/_guides/quartz.adoc:150
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Scheduling Jobs Programmatically"
 msgstr "プログラムによるジョブのスケジューリング"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:154
-#, fuzzy
 msgid "It is also possible to leverage the Quartz API directly.  You can inject the underlying `org.quartz.Scheduler` in any bean:"
-msgstr "Quartz APIを直接活用することも可能です。どのBeanでも、その下にある `org.quartz.Scheduler` を注入することができます。"
+msgstr "Quartz APIを直接利用することも可能です。どのBeanにも、基礎となる `org.quartz.Scheduler` を注入することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/quartz.adoc:161
@@ -449,37 +429,32 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:200
-#, fuzzy
 msgid "Inject the underlying `org.quartz.Scheduler` instance."
 msgstr "基礎となる `org.quartz.Scheduler` インスタンスを注入します。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:201
-#, fuzzy
 msgid "Schedule a new job using the Quartz API."
 msgstr "Quartz APIを使用して新しいジョブをスケジュールします。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:202
-#, fuzzy
 msgid "Invoke the `TaskBean#performTask()` method from the job. Jobs are also link:cdi[container-managed] beans if they belong to a link:cdi-reference[bean archive]."
 msgstr "ジョブから `TaskBean#performTask()` メソッドを呼び出します。ジョブは、 link:cdi-reference[Beanアーカイブ] に属している場合、 link:cdi[コンテナー管理された] Beanでもあります。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:204
-#, fuzzy
 msgid "By default, the scheduler is not started unless a `@Scheduled` business method is found. You may need to force the start of the scheduler for \"pure\" programmatic scheduling. See also <<quartz-configuration-reference>>."
-msgstr "デフォルトでは、 `@Scheduled` ビジネスメソッドが見つからない限り、スケジューラーは起動されません。純粋なプログラマティックスケジューリングを行うには、スケジューラーを強制的に起動させる必要があるかもしれません。 link:#quartz-configuration-reference[Quartz-configuration-reference]] も参照してください。"
+msgstr "デフォルトでは、 `@Scheduled` ビジネスメソッドが見つからない限り、スケジューラーは起動されません。純粋なプログラムによるスケジューリングを行うには、スケジューラーを強制的に起動させる必要があるかもしれません。 link:#quartz-configuration-reference[Quartz-configuration-reference] も参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:205
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Updating the application configuration file"
 msgstr "アプリケーション設定ファイルの更新"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:208
-#, fuzzy
 msgid "Edit the `application.properties` file and add the below configuration:"
 msgstr "`application.properties` ファイルを編集し、以下の設定を追加します。"
 
@@ -528,25 +503,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:235
-#, fuzzy
 msgid "Indicate that the scheduler will be run in clustered mode"
 msgstr "スケジューラーがクラスターモードで実行されることを示します。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:236
-#, fuzzy
 msgid "Use the database store to persist job related information so that they can be shared between nodes"
 msgstr "データベースストアを使用してジョブ関連情報を永続化し、ノード間で共有できるようにします。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:237
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Updating the resource and the test"
 msgstr "リソースとテストの更新"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:240
-#, fuzzy
 msgid "Edit the `TaskResource` class, and update the content to:"
 msgstr "`TaskResource` クラスを編集して、内容を更新します。"
 
@@ -591,13 +563,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:262
-#, fuzzy
 msgid "Retrieve the list of created tasks from the database"
-msgstr "データベースから作成されたタスクのリストを取得します。"
+msgstr "作成されたタスクのリストをデータベースから取得します。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:264
-#, fuzzy
 msgid "We also need to update the tests. Edit the `TaskResourceTest` class to match:"
 msgstr "テストも更新する必要があります。 `TaskResourceTest` クラスを一致するように編集します。"
 
@@ -653,33 +623,30 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:293
-#, fuzzy
 msgid "Ensure that we have a `200` response and at least one task created"
-msgstr "`200` のレスポンスと、少なくとも 1 つのタスクが作成されていることを確認してください。"
+msgstr "`200` のレスポンスが返却されていることと、少なくとも 1 つのタスクが作成されていることを確認してください。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:294
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating Quartz Tables"
-msgstr "石英テーブルの作成"
+msgstr "Quartz テーブルの作成"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:298
-#, fuzzy
 msgid "Add a SQL migration file named `src/main/resources/db/migration/V2.0.0\\__QuarkusQuartzTasks.sql` with the content copied from file with the content from link:{quickstarts-blob-url}/quartz-quickstart/src/main/resources/db/migration/V2.0.0__QuarkusQuartzTasks.sql[V2.0.0__QuarkusQuartzTasks.sql]."
 msgstr "link:{quickstarts-blob-url}/quartz-quickstart/src/main/resources/db/migration/V2.0.0__QuarkusQuartzTasks.sql[V2.0.0.0__QuarkusQuartzTasks.sql] からコピーした内容でファイルからコピーした内容で `src/main/resources/db/migration/V2.0.0__QuarkusQuartzTasks.sql` という名前のSQLマイグレーションファイルを追加します。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:299
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring the load balancer"
 msgstr "ロードバランサーの設定"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:302
-#, fuzzy
 msgid "In the root directory, create a `nginx.conf` file with the following content:"
-msgstr "ルートディレクトリーに、以下の内容の `nginx.conf` ファイルを作成します。"
+msgstr "ルートディレクトリーに、以下の内容の `nginx.conf` ファイルを作成します:"
 
 #. type: delimited block -
 #: upstream/_guides/quartz.adoc:306
@@ -712,19 +679,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:322
-#, fuzzy
 msgid "Route all traffic to our tasks application"
 msgstr "すべてのトラフィックをタスクアプリケーションにルーティング"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:323
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting Application Deployment"
-msgstr "アプリケーション展開の設定"
+msgstr "アプリケーションデプロイメントの設定"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:326
-#, fuzzy
 msgid "In the root directory, create a `docker-compose.yml` file with the following content:"
 msgstr "ルートディレクトリーに、以下の内容の `docker-compose.yml` ファイルを作成します。"
 
@@ -796,31 +761,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:373
-#, fuzzy
 msgid "Define the tasks service"
 msgstr "タスクサービスの定義"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:374
-#, fuzzy
 msgid "Define the nginx load balancer to route incoming traffic to an appropriate node"
-msgstr "受信トラフィックを適切なノードにルーティングするための nginx ロードバランサーを定義します。"
+msgstr "受信トラフィックを適切なノードにルーティングするための nginx ロードバランサーを定義"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:375
-#, fuzzy
 msgid "Define the configuration to run the database"
-msgstr "データベースを実行するための設定を定義します。"
+msgstr "データベースを実行するための設定を定義"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:376
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running the database"
 msgstr "データベースの実行"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:379
-#, fuzzy
 msgid "In a separate terminal, run the below command:"
 msgstr "別のターミナルで以下のコマンドを実行します。"
 
@@ -832,37 +793,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:386
-#, fuzzy
 msgid "Start the database instance using the configuration options supplied in the `docker-compose.yml` file"
 msgstr "`docker-compose.yml` ファイルで提供されている設定オプションを使用してデータベースインスタンスを起動します。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:387
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Run the application in Dev Mode"
 msgstr "アプリケーションを開発モードで実行します。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:391
-#, fuzzy
 msgid "Run the application with: `./mvnw quarkus:dev`.  After a few seconds, open another terminal and run `curl localhost:8080/tasks` to verify that we have at least one task created."
 msgstr "`./mvnw quarkus:dev` でアプリケーションを実行します。数秒後、別のターミナルを開き、 `curl localhost:8080/tasks` を実行して、少なくとも 1 つのタスクが作成されていることを確認します。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:394
-#, fuzzy
 msgid "As usual, the application can be packaged using `./mvnw clean package` and executed using the `target/quarkus-app/quarkus-run.jar` file.  You can also generate the native executable with `./mvnw clean package -Pnative`."
-msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `-runner.jar` ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative` ."
+msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `target/quarkus-app/quarkus-run.jar` ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative` でネイティブ実行ファイルを生成することも出来ます。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:395
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Packaging the application and run several instances"
 msgstr "アプリケーションのパッケージ化と複数のインスタンスの実行"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:398
-#, fuzzy
 msgid "The application can be packaged using `./mvnw clean package`. Once the build is successful, run the below command:"
 msgstr "アプリケーションは `./mvnw clean package` を使用してパッケージ化することができます。ビルドが成功したら、以下のコマンドを実行します。"
 
@@ -874,45 +831,39 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:405
-#, fuzzy
 msgid "Start two instances of the application and a load balancer"
-msgstr "アプリケーションとロードバランサーの2つのインスタンスを起動する"
+msgstr "アプリケーションとロードバランサーの2つのインスタンスを起動"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:407
-#, fuzzy
 msgid "After a few seconds, in another terminal, run `curl localhost:8080/tasks` to verify that tasks were only created at different instants and in an interval of 10 seconds."
-msgstr "数秒後、別のターミナルで `curl localhost:8080/tasks` を実行して、タスクが異なるインスタンスで、10秒の間隔でしか作成されていないことを確認します。"
+msgstr "数秒後、別のターミナルで `curl localhost:8080/tasks` を実行し、タスクが異なるタイミングで、10秒の間隔でのみ作成されていることを確認します。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:409
-#, fuzzy
 msgid "You can also generate the native executable with `./mvnw clean package -Pnative`."
 msgstr "`./mvnw clean package -Pnative` でネイティブの実行ファイルを生成することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:411
-#, fuzzy
 msgid "It's the reponsibility of the deployer to clear/remove the previous state, i.e. stale jobs and triggers. Moreover, the applications that form the \"Quartz cluster\" should be identical, otherwise an unpredictable result may occur."
 msgstr "前の状態、つまり古いジョブやトリガーをクリア/削除するのはデプロイ側の責任です。さらに、\"Quartzクラスター\"を形成するアプリケーションは同一でなければならず、そうでなければ予測不可能な結果が発生する可能性があります。"
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:413
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Registering Plugin and Listeners"
 msgstr "プラグインとリスナーの登録"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:416
-#, fuzzy
 msgid "You can register `plugins`, `job-listeners` and `trigger-listeners` through Quarkus configuration."
 msgstr "Quarkusの設定から、 `plugins` 、 `job-listeners` 、 `trigger-listeners` を登録することができます。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:418
-#, fuzzy
 msgid "The example below registers the plugin `org.quartz.plugins.history.LoggingJobHistoryPlugin` named as `jobHistory` with the property `jobSuccessMessage` defined as `Job [{1}.{0}] execution complete and reports: {8}`"
-msgstr "以下の例では、 `org.quartz.plugins.history.LoggingJobHistoryPlugin` という名前のプラグインを `jobHistory` として登録し、プロパティー `jobSuccessMessage` を `Job [{1}.{0}] execution complete and reports: {8}`"
+msgstr "以下の例では、 `org.quartz.plugins.history.LoggingJobHistoryPlugin` という名前のプラグインを `jobHistory` として登録し、プロパティー `jobSuccessMessage` を `Job [{1}.{0}] execution complete and reports: {8}` として定義します。"
 
 #. type: delimited block -
 #: upstream/_guides/quartz.adoc:423
@@ -924,9 +875,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:426
-#, fuzzy
 msgid "You can also register a listener programmatically with an injected `org.quartz.Scheduler`:"
-msgstr "リスナーをプログラムで登録するには、 `org.quartz.Scheduler` ."
+msgstr "注入された `org.quartz.Scheduler` でリスナーをプログラムで登録することも出来ます。"
 
 #. type: delimited block -
 #: upstream/_guides/quartz.adoc:435
@@ -942,6 +892,6 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/quartz.adoc:438
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quartz Configuration Reference"
-msgstr "クォーツ構成リファレンス"
+msgstr "Quartz設定リファレンス"
