Replace "bean" translations to align words

--- a/l10n/po/ja_JP/_guides/config-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-reference.adoc.po
@@ -304,7 +304,7 @@ msgstr "プログラムから設定にアクセス"
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:133
 msgid "You can also access the configuration programmatically.  It can be handy to achieve dynamic lookup, or retrieve configured values from classes that are neither CDI beans or JAX-RS resources."
-msgstr "プログラムから設定にアクセスすることもできます。動的なルックアップを実現したり、CDI ビーンズでも JAX-RS リソースでもないクラスから設定値を取得したりするのに便利です。"
+msgstr "プログラムから設定にアクセスすることもできます。動的なルックアップを実現したり、CDI Beanでも JAX-RS リソースでもないクラスから設定値を取得したりするのに便利です。"
 
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:135
