--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -1511,7 +1511,7 @@ msgstr "ジェイエムエックス"
 #: upstream/_guides/hibernate-orm.adoc:711
 #, fuzzy
 msgid "Management beans are not working in GraalVM native images; therefore Hibernate's capability to register statistics and management operations with the JMX bean is disabled when compiling into a native image.  This limitation is likely permanent, as it's not a goal for native images to implement support for JMX. All such metrics can be accessed in other ways."
-msgstr "管理ビーンはGraalVMネイティブイメージでは動作しません。そのため、ネイティブイメージにコンパイルする際に、統計情報や管理操作をJMXビーンに登録するHibernateの機能は無効になっています。ネイティブイメージではJMXのサポートを実装することが目標ではないため、この制限は永久的なものになる可能性が高いです。そのようなメトリクスはすべて他の方法でアクセスできます。"
+msgstr "管理BeanはGraalVMネイティブイメージでは動作しません。そのため、ネイティブイメージにコンパイルする際に、統計情報や管理操作をJMXBeanに登録するHibernateの機能は無効になっています。ネイティブイメージではJMXのサポートを実装することが目標ではないため、この制限は永久的なものになる可能性が高いです。そのようなメトリクスはすべて他の方法でアクセスできます。"
 
 #. type: Labeled list
 #: upstream/_guides/hibernate-orm.adoc:712
@@ -1755,7 +1755,7 @@ msgstr ""
 #: upstream/_guides/hibernate-orm.adoc:816
 #, fuzzy
 msgid "The bean is made `@RequestScoped` as the tenant resolution depends on the incoming request."
-msgstr "テナントの解決は着信リクエストに依存するので、ビーンは `@RequestScoped` にしています。"
+msgstr "テナントの解決は着信リクエストに依存するので、Beanは `@RequestScoped` にしています。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:818
@@ -2050,4 +2050,4 @@ msgstr "テナント接続をプログラムで解決"
 #: upstream/_guides/hibernate-orm.adoc:997
 #, fuzzy
 msgid "If you need a more dynamic configuration for the different tenants you want to support and don't want to end up with multiple entries in your configuration file, you can use the `io.quarkus.hibernate.orm.runtime.tenant.TenantConnectionResolver` interface to implement your own logic for retrieving a connection. Creating an application scoped bean that implements this interface will replace the current Quarkus default implementation `io.quarkus.hibernate.orm.runtime.tenant.DataSourceTenantConnectionResolver`. Your custom connection resolver would allow for example to read tenant information from a database and create a connection per tenant at runtime based on it."
-msgstr "サポートしたいさまざまなテナントに対して、より動的な設定が必要で、設定ファイルに複数のエントリーがある状態で終わらせたくない場合は、 `io.quarkus.hibernate.orm.runtime.tenant.TenantConnectionResolver` インターフェイスを使用して、接続を取得するための独自のロジックを実装することができます。このインターフェイスを実装したアプリケーションスコープ付きビーンを作成すると、現在のQuarkusのデフォルト実装 `io.quarkus.hibernate.orm.runtime.tenant.DataSourceTenantConnectionResolver` を置き換えることができます。カスタムの接続リゾルバを使用すると、例えば、データベースからテナント情報を読み取り、それに基づいて実行時にテナントごとに接続を作成することができます。"
+msgstr "サポートしたいさまざまなテナントに対して、より動的な設定が必要で、設定ファイルに複数のエントリーがある状態で終わらせたくない場合は、 `io.quarkus.hibernate.orm.runtime.tenant.TenantConnectionResolver` インターフェイスを使用して、接続を取得するための独自のロジックを実装することができます。このインターフェイスを実装したアプリケーションスコープ付きBeanを作成すると、現在のQuarkusのデフォルト実装 `io.quarkus.hibernate.orm.runtime.tenant.DataSourceTenantConnectionResolver` を置き換えることができます。カスタムの接続リゾルバを使用すると、例えば、データベースからテナント情報を読み取り、それに基づいて実行時にテナントごとに接続を作成することができます。"
