--- a/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -945,7 +945,7 @@ msgstr ""
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:470
 #, fuzzy
 msgid "We will need to reference the configurer from the configuration properties, so we make it a named bean."
-msgstr "コンフィグレータはコンフィグプロパティーから参照する必要があるので、名前付きビーンにします。"
+msgstr "コンフィグレータはコンフィグプロパティーから参照する必要があるので、名前付きBeanにします。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:472
@@ -1658,7 +1658,7 @@ msgstr "Beanの参照について"
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:791
 #, fuzzy
 msgid "When referencing beans using a string value in configuration properties, that string is parsed."
-msgstr "設定プロパティーで文字列の値を使用してビーンを参照する場合、その文字列は解析されます。"
+msgstr "設定プロパティーで文字列の値を使用してBeanを参照する場合、その文字列は解析されます。"
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:793
@@ -1670,13 +1670,13 @@ msgstr "最も一般的なフォーマットは以下の通りです。"
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:796
 #, fuzzy
 msgid "`bean:` followed by the name of a `@Named` CDI bean.  For example `bean:myBean`."
-msgstr "`bean:` の後に `@Named` CDI ビーンの名前が続きます。例えば `bean:myBean` ."
+msgstr "`bean:` の後に `@Named` CDI Beanの名前が続きます。例えば `bean:myBean` ."
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:799
 #, fuzzy
 msgid "`class:` followed by the fully-qualified name of a class, to be instantiated through CDI if it's a CDI bean, or through its public, no-argument constructor otherwise.  For example `class:com.mycompany.MyClass`."
-msgstr "`class:` の後にクラスの完全修飾名を付けて、CDI ビーンの場合は CDI を通して、そうでない場合はパブリックで引数なしのコンストラクタを通してインスタンス化されます。例えば `class:com.mycompany.MyClass` ."
+msgstr "`class:` の後にクラスの完全修飾名を付けて、CDI Beanの場合は CDI を通して、そうでない場合はパブリックで引数なしのコンストラクタを通してインスタンス化されます。例えば `class:com.mycompany.MyClass` ."
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:803
