--- a/l10n/po/ja_JP/_guides/ide-configuration.adoc.po
+++ b/l10n/po/ja_JP/_guides/ide-configuration.adoc.po
@@ -350,7 +350,7 @@ msgstr "**Apache Netbeans**\n"
 #: upstream/_guides/ide-configuration.adoc:124
 #, fuzzy
 msgid "In Netbeans:"
-msgstr "ネットビーンズでは"
+msgstr "Netbeansでは"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:126
