--- a/l10n/po/ja_JP/_guides/microprofile-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-fault-tolerance.adoc.po
@@ -675,7 +675,7 @@ msgstr "遮断器は、システムの一部が一時的に不安定になった
 #: upstream/_guides/microprofile-fault-tolerance.adoc:363
 #, fuzzy
 msgid "Add the following code into the `CoffeeRepositoryService` bean, so that we can demonstrate a circuit breaker in action:"
-msgstr "`CoffeeRepositoryService` ビーンに以下のコードを追加して、サーキットブレーカーの動作をデモできるようにします。"
+msgstr "`CoffeeRepositoryService` Beanに以下のコードを追加して、サーキットブレーカーの動作をデモできるようにします。"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-fault-tolerance.adoc:369
