--- a/l10n/po/ja_JP/_guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute-reference.adoc.po
@@ -2412,7 +2412,7 @@ msgstr "テンプレートに直接Beansを注入する"
 #: upstream/_guides/qute-reference.adoc:1068
 #, fuzzy
 msgid "A CDI bean annotated with `@Named` can be referenced in any template through the `inject` namespace:"
-msgstr "`@Named` でアノテーションされた CDI ビーンは、 `inject` 名前空間を通して、どのテンプレートでも参照することができます。"
+msgstr "`@Named` でアノテーションされた CDI Beanは、 `inject` 名前空間を通して、どのテンプレートでも参照することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/qute-reference.adoc:1072
@@ -2424,13 +2424,13 @@ msgstr ""
 #: upstream/_guides/qute-reference.adoc:1074
 #, fuzzy
 msgid "First, a bean with name `foo` is found and then used as the base object."
-msgstr "まず、 `foo` という名前のビーンを見つけ、それをベースオブジェクトとして使用します。"
+msgstr "まず、 `foo` という名前のBeanを見つけ、それをベースオブジェクトとして使用します。"
 
 #. type: Plain text
 #: upstream/_guides/qute-reference.adoc:1077
 #, fuzzy
 msgid "All expressions using the `inject` namespace are validated during build.  For the expression `inject:foo.price` the implementation class of the injected bean must either have the `price` property (e.g. a `getPrice()` method) or a matching <<template_extension_methods,template extension method>> must exist."
-msgstr "`inject` 名前空間を使用するすべての式は、ビルド時に検証されます。式 `inject:foo.price` については、注入されたビーンの実装クラスが `price` プロパティー ( `getPrice()` メソッドなど) を持っているか、一致する link:#template_extension_methods[テンプレート拡張メソッド] が存在していなければなりません。"
+msgstr "`inject` 名前空間を使用するすべての式は、ビルド時に検証されます。式 `inject:foo.price` については、注入されたBeanの実装クラスが `price` プロパティー ( `getPrice()` メソッドなど) を持っているか、一致する link:#template_extension_methods[テンプレート拡張メソッド] が存在していなければなりません。"
 
 #. type: Plain text
 #: upstream/_guides/qute-reference.adoc:1079
