--- a/l10n/po/ja_JP/_guides/spring-scheduled.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-scheduled.adoc.po
@@ -260,7 +260,7 @@ msgstr ""
 #: upstream/_guides/spring-scheduled.adoc:119
 #, fuzzy
 msgid "Declare the bean in the _application_ scope. Spring only detects @Scheduled annotations in beans."
-msgstr "_アプリケーション_ スコープでビーンを宣言します。Springはビーン内の@Scheduledアノテーションのみを検出します。"
+msgstr "_アプリケーション_ スコープでBeanを宣言します。SpringはBean内の@Scheduledアノテーションのみを検出します。"
 
 #. type: Plain text
 #: upstream/_guides/spring-scheduled.adoc:120
