Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/quartz.adoc.po
@@ -28,12 +28,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:13
 msgid "Modern applications often need to run specific tasks periodically.  In this guide, you learn how to schedule periodic clustered tasks using the http://www.quartz-scheduler.org/[Quartz] extension."
-msgstr ""
+msgstr "最近のアプリケーションでは、定期的に特定のタスクを実行する必要があることがよくあります。このガイドでは、 link:http://www.quartz-scheduler.org/[Quartz] エクステンションを使用して定期的にクラスター化されたタスクをスケジュールする方法を学びます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:17
 msgid "If you only need to run in-memory scheduler use the link:scheduler[Scheduler] extension."
-msgstr ""
+msgstr "インメモリースケジューラーを実行する必要がある場合は、 link:scheduler[Scheduler] エクステンションを使用してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:18
@@ -80,7 +80,7 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:31
 msgid "In this guide, we are going to expose one Rest API `tasks` to visualise the list of tasks created by a Quartz job running every 10 seconds."
-msgstr ""
+msgstr "このガイドでは、10秒ごとに実行されるQuartzジョブによって作成されたタスクのリストを可視化するために、1つのRest API `tasks` を公開します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:32
@@ -100,7 +100,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:40
 msgid "The solution is located in the `quartz-quickstart` {quickstarts-tree-url}/quartz-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `quartz-quickstart` {quickstarts-tree-url}/quartz-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:41
@@ -154,7 +154,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:63
 msgid "an `org.acme.quartz.TaskResource` resource"
-msgstr ""
+msgstr "`org.acme.quartz.TaskResource` リソース"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:64
@@ -164,12 +164,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:66
 msgid "The Maven project also imports the Quarkus Quartz extension."
-msgstr ""
+msgstr "MavenプロジェクトはQuarkus Quartzエクステンションもインポートしています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:69
 msgid "If you already have your Quarkus project configured, you can add the `quartz` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `quartz` エクステンションを追加することができます:"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:73
@@ -195,18 +195,18 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/quartz.adoc:88
 msgid "To use a JDBC store, the `quarkus-agroal` extension, which provides the datasource support, is also required."
-msgstr ""
+msgstr "JDBCストアを使用するには、データソースのサポートを提供する `quarkus-agroal` エクステンションも必要です。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:90
 #, no-wrap
 msgid "Creating the Task Entity"
-msgstr ""
+msgstr "タスクエンティティーの作成"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:93
 msgid "In the `org.acme.quartz` package, create the `Task` class, with the following content:"
-msgstr ""
+msgstr "`org.acme.quartz` パッケージで、以下の内容の `Task` クラスを作成します:"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:97
@@ -265,7 +265,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:119
 msgid "Declare the entity using link:hibernate-orm-panache[Panache]"
-msgstr ""
+msgstr "link:hibernate-orm-panache[Panache] を使用してエンティティーを宣言する"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:120
@@ -276,7 +276,7 @@ msgstr "スケジュールされたジョブの作成"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:123
 msgid "In the `org.acme.quartz` package, create the `TaskBean` class, with the following content:"
-msgstr ""
+msgstr "`org.acme.quartz` パッケージで、以下の内容の `TaskBean` クラスを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:129
@@ -330,7 +330,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:148
 msgid "Create a new `Task` with the current start time."
-msgstr ""
+msgstr "現在の開始時刻で新しい `Task` を作成します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:149
@@ -341,12 +341,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/quartz.adoc:150
 #, no-wrap
 msgid "Scheduling Jobs Programmatically"
-msgstr ""
+msgstr "プログラムによるジョブのスケジューリング"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:154
 msgid "It is also possible to leverage the Quartz API directly.  You can inject the underlying `org.quartz.Scheduler` in any bean:"
-msgstr ""
+msgstr "Quartz APIを直接利用することも可能です。どのBeanにも、基礎となる `org.quartz.Scheduler` を注入することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:161
@@ -423,12 +423,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:197
 msgid "Inject the underlying `org.quartz.Scheduler` instance."
-msgstr ""
+msgstr "基礎となる `org.quartz.Scheduler` インスタンスを注入します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:198
 msgid "Schedule a new job using the Quartz API."
-msgstr ""
+msgstr "Quartz APIを使用して新しいジョブをスケジュールします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:199
@@ -438,7 +438,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:201
 msgid "By default, the scheduler is not started unless a `@Scheduled` business method is found. You may need to force the start of the scheduler for \"pure\" programmatic scheduling. See also <<quartz-configuration-reference>>."
-msgstr ""
+msgstr "デフォルトでは、 `@Scheduled` ビジネスメソッドが見つからない限り、スケジューラーは起動されません。純粋なプログラムによるスケジューリングを行うには、スケジューラーを強制的に起動させる必要があるかもしれません。 link:#quartz-configuration-reference[Quartz-configuration-reference] も参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:202
@@ -449,7 +449,7 @@ msgstr "アプリケーション設定ファイルの更新"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:205
 msgid "Edit the `application.properties` file and add the below configuration:"
-msgstr ""
+msgstr "`application.properties` ファイルを編集し、以下の設定を追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:210
@@ -497,12 +497,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:232
 msgid "Indicate that the scheduler will be run in clustered mode"
-msgstr ""
+msgstr "スケジューラーがクラスターモードで実行されることを示します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:233
 msgid "Use the database store to persist job related information so that they can be shared between nodes"
-msgstr ""
+msgstr "データベースストアを使用してジョブ関連情報を永続化し、ノード間で共有できるようにします。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:234
@@ -513,7 +513,7 @@ msgstr "リソースとテストの更新"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:237
 msgid "Edit the `TaskResource` class, and update the content to:"
-msgstr ""
+msgstr "`TaskResource` クラスを編集して、内容を更新します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:243
@@ -558,12 +558,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:260
 msgid "Retrieve the list of created tasks from the database"
-msgstr ""
+msgstr "作成されたタスクのリストをデータベースから取得します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:262
 msgid "We also need to update the tests. Edit the `TaskResourceTest` class to match:"
-msgstr ""
+msgstr "テストも更新する必要があります。 `TaskResourceTest` クラスを一致するように編集します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:268
@@ -618,7 +618,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:291
 msgid "Ensure that we have a `200` response and at least one task created"
-msgstr ""
+msgstr "`200` のレスポンスが返却されていることと、少なくとも 1 つのタスクが作成されていることを確認してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:292
@@ -629,18 +629,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:296
 msgid "Add a SQL migration file named `src/main/resources/db/migration/V2.0.0\\__QuarkusQuartzTasks.sql` with the content copied from file with the content from link:{quickstarts-blob-url}/quartz-quickstart/src/main/resources/db/migration/V2.0.0__QuarkusQuartzTasks.sql[V2.0.0__QuarkusQuartzTasks.sql]."
-msgstr ""
+msgstr "link:{quickstarts-blob-url}/quartz-quickstart/src/main/resources/db/migration/V2.0.0__QuarkusQuartzTasks.sql[V2.0.0.0__QuarkusQuartzTasks.sql] からコピーした内容でファイルからコピーした内容で `src/main/resources/db/migration/V2.0.0__QuarkusQuartzTasks.sql` という名前のSQLマイグレーションファイルを追加します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:297
 #, no-wrap
 msgid "Configuring the load balancer"
-msgstr ""
+msgstr "ロードバランサーの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:300
 msgid "In the root directory, create a `nginx.conf` file with the following content:"
-msgstr ""
+msgstr "ルートディレクトリーに、以下の内容の `nginx.conf` ファイルを作成します:"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:304
@@ -674,18 +674,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:320
 msgid "Route all traffic to our tasks application"
-msgstr ""
+msgstr "すべてのトラフィックをタスクアプリケーションにルーティング"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:321
 #, no-wrap
 msgid "Setting Application Deployment"
-msgstr ""
+msgstr "アプリケーションデプロイメントの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:324
 msgid "In the root directory, create a `docker-compose.yml` file with the following content:"
-msgstr ""
+msgstr "ルートディレクトリーに、以下の内容の `docker-compose.yml` ファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:328
@@ -756,28 +756,28 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:371
 msgid "Define the tasks service"
-msgstr ""
+msgstr "タスクサービスの定義"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:372
 msgid "Define the nginx load balancer to route incoming traffic to an appropriate node"
-msgstr ""
+msgstr "受信トラフィックを適切なノードにルーティングするための nginx ロードバランサーを定義"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:373
 msgid "Define the configuration to run the database"
-msgstr ""
+msgstr "データベースを実行するための設定を定義"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:374
 #, no-wrap
 msgid "Running the database"
-msgstr ""
+msgstr "データベースの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:377
 msgid "In a separate terminal, run the below command:"
-msgstr ""
+msgstr "別のターミナルで以下のコマンドを実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:381
@@ -788,18 +788,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:384
 msgid "Start the database instance using the configuration options supplied in the `docker-compose.yml` file"
-msgstr ""
+msgstr "`docker-compose.yml` ファイルで提供されている設定オプションを使用してデータベースインスタンスを起動します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:385
 #, no-wrap
 msgid "Run the application in Dev Mode"
-msgstr ""
+msgstr "アプリケーションを開発モードで実行します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:389
 msgid "Run the application with: `./mvnw quarkus:dev`.  After a few seconds, open another terminal and run `curl localhost:8080/tasks` to verify that we have at least one task created."
-msgstr ""
+msgstr "`./mvnw quarkus:dev` でアプリケーションを実行します。数秒後、別のターミナルを開き、 `curl localhost:8080/tasks` を実行して、少なくとも 1 つのタスクが作成されていることを確認します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:392
@@ -810,12 +810,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/quartz.adoc:393
 #, no-wrap
 msgid "Packaging the application and run several instances"
-msgstr ""
+msgstr "アプリケーションのパッケージ化と複数のインスタンスの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:396
 msgid "The application can be packaged using `./mvnw clean package`. Once the build is successful, run the below command:"
-msgstr ""
+msgstr "アプリケーションは `./mvnw clean package` を使用してパッケージ化することができます。ビルドが成功したら、以下のコマンドを実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:400
@@ -826,23 +826,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:403
 msgid "Start two instances of the application and a load balancer"
-msgstr ""
+msgstr "アプリケーションとロードバランサーの2つのインスタンスを起動"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:405
 msgid "After a few seconds, in another terminal, run `curl localhost:8080/tasks` to verify that tasks were only created at different instants and in an interval of 10 seconds."
-msgstr ""
+msgstr "数秒後、別のターミナルで `curl localhost:8080/tasks` を実行し、タスクが異なるタイミングで、10秒の間隔でのみ作成されていることを確認します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:407
 msgid "You can also generate the native executable with `./mvnw clean package -Pnative`."
-msgstr ""
+msgstr "`./mvnw clean package -Pnative` でネイティブの実行ファイルを生成することもできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quartz.adoc:409
 #, no-wrap
 msgid "Registering Plugin and Listeners"
-msgstr ""
+msgstr "プラグインとリスナーの登録"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:412
@@ -851,8 +851,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quartz.adoc:414
+#, fuzzy
 msgid "The example bellow registers the plugin `org.quartz.plugins.history.LoggingJobHistoryPlugin` named as `jobHistory` with the property `jobSuccessMessage` defined as `Job [{1}.{0}] execution complete and reports: {8}`"
-msgstr ""
+msgstr "以下の例では、 `org.quartz.plugins.history.LoggingJobHistoryPlugin` という名前のプラグインを `jobHistory` として登録し、プロパティー `jobSuccessMessage` を `Job [{1}.{0}] execution complete and reports: {8}` として定義します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/quartz.adoc:419
