--- a/l10n/po/ja_JP/_versions/1.11/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-jwt.adoc.po
@@ -1059,7 +1059,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-jwt.adoc:599
 msgid "You can also generate the native executable with `./mvnw clean package -Pnative`."
-msgstr ""
+msgstr "`./mvnw clean package -Pnative` でネイティブの実行ファイルを生成することもできます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/security-jwt.adoc:599
