--- a/l10n/po/ja_JP/_versions/1.7/guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-oauth2.adoc.po
@@ -605,7 +605,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:323
 msgid "You can also generate the native executable with `./mvnw clean package -Pnative`."
-msgstr ""
+msgstr "`./mvnw clean package -Pnative` でネイティブの実行ファイルを生成することもできます。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:323
